fix: Fixing image streched on mobile

--- a/src/components/home/details/details.scss
+++ b/src/components/home/details/details.scss
@@ -70,6 +70,7 @@
         z-index: 2;
 
         @include mobile {
+          max-width: initial;
           max-height: 100%;
         }
       }
